--- a/octoprint_mrbeam/templates/wizard/firstrun_start.jinja2
+++ b/octoprint_mrbeam/templates/wizard/firstrun_start.jinja2
@@ -1,6 +1,6 @@
 <img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/start.png">
 
-<h3 data-cy="first-run-wizard">{{ _('Welcome to the Mr Beam community!') }}</h3>
+<h3 data-test="first-run-wizard">{{ _('Welcome to the Mr Beam community!') }}</h3>
 {% trans %}
 <p>
     This dialog will get your Mr Beam ready in just a couple of minutes.<br>
